# datasets-rs

./: Cargo.toml
datasets-core/: Cargo.toml
datasets-core/src/: lib.rs
examples/: inspect.rs
src/: lib.rs  parquet.rs
