[package]
name = "datasets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow2 = { version = "0.17.2", features = ["io_parquet"] }
# hf-hub = { git = "https://github.com/Narsil/hf-hub-rs" }
hf-hub = { path = "../hf-hub-rs" }
parquet = "41.0.0"
parquet2 = "0.17.2"
reqwest = "0.11.18"
thiserror = "1.0.40"

[dev-dependencies]
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
